--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
     context-path: /rental
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/gamerental?useUnicode=true&characterEncoding=utf-8&userSSL=false&serverTimezone=CTT
-    data-username: root
-    data-password: 123456
+    url: jdbc:mysql://localhost:3306/gamerental
+    username: root
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 
     mvc:
@@ -35,7 +35,8 @@ mybatis-plus:
     #meta-object-handler: com.baomidou.springboot.xxx
     #自定义SQL注入器
     #sql-injector: com.baomidou.springboot.xxx
+
   configuration:
-    map-underscore-to-camel-case: true
+    map-underscore-to-camel-case: false
     cache-enabled: false
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
