--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
     context-path: /rental
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/gamerental
+    url: jdbc:mysql://localhost:3306/rental?serverTimezone=UTC
     username: root
-    password: 123456
+    password: 1234567
     driver-class-name: com.mysql.cj.jdbc.Driver
 
     mvc:
